pkg/lang/testdata/ub/inputs/invalid/default-nested-below-minimum.ub
inputs: {
  spec: {
    type: object({
      port: { type: integer, default: 0, minimum: 1 },
    })
  }
}
